tests/samples/negative/pattern_matching/match_expression_missing_case.ax
module match_expression_missing_case;

enum Choice: u8 {
    zero = 0,
    one = 1,
}

fn main() -> i32 {
    return match Choice.zero {
        .zero => 0,
    };
}
